fix: clean single cors filter without security dependency